Increasing perm size when running the tests, as these are failing the build